
* The Infinity Gate
** Volan (Work in Progress)
*** New: Timer added for Energy Beam.
*** New: Timer added for Spine Shatter.
*** New: Timers added for Exitinciton.
*** New: Timers, Mechanic Spy and Alert added for Outbreak.
*** New: Eve of Oblivion.

Slivers
* Grim Awakening
** Salvarola
*** New: Added Alert and Spy for Infernal Burn.
*** New: Added Personal Alert for Infernal Burn.

----
v1.5.5

Rift Version
* Change: Now supports Rift 2.5

Marks
* New: Added all new marks available with Rift 2.5.

Percentage Monitor
* Fixed: Issues with Mark sizes and transparency.

----
v1.5.4

Castbars
* Fixed: Error 111 when unpinning castbars via the encounter castbar tab while global bars are not visible.

----
v1.5.3

Castbars
* Fixed: Error 609 related to Dynamic unit castbar handling.
* Fixed: A few lag issues with texture loading. (any "ui" based errors, including error 690)
* Fixed: Added catch for error 4535 (possibly performance related).

LibSBuff
* Fixed: Error 81 for buff monitoring.

Encounters
* Infinity Gate
** New: Added Breaker X-1 "Onyx"
*** New: Added Enrage timer of 9 minutes.
*** New: Added Tank-Swap for Fission Burst.
*** New: Added Alert and Spy for Ionic Decay.
*** New: Added Alert and Spy for Kinetic Distortion.
*** New: Added Alert for Quantum Disruptor.
** New: Added Viktus and Mordan
*** New: Added Enrage timer of 6 minutes 30 seconds.
*** New: Added Timer and Alert for Sibling Rivalry casts.
*** New: Added Timer and Alert for Ensnaring Creepers.
*** New: Added Timer and Alert for Ravenous Legion.
** New: Added Template for Volan.
* Grim Awakening
** Salvarola
*** New: Added Percentage Monitor for Flames and Blood
*** New: Added Phase Tracking in Phase Monitor to account for Flames and Blood.

Translations
* French updates
* German updates

----
v1.5.2

Castbars
* Fixed: Error 1304 - Passive castbar creation.
* Fixed: Error 70 - Player castbar pin scaling.
* Fixed: Error 621 - For either missing Name or missing object creation.